# ai-toolbox

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/face_detector/: FaceDetector.cpp  FaceDetector.h
test/: CMakeLists.txt  Log.h  Renderer.cpp  Renderer.h  main.cpp
test/resource/: compile-shader.cmd
test/resource/spv/: 05_texture_image.vert.spv
test/src/: Renderer.cpp  Renderer.h
